--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,132 @@
-body {
+@import url("https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css");
+
+*{
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+ul{
+  margin: 0;
+  list-style-type: none;
+  padding: 0;
+}
+.nav{
+  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.5);
+  z-index: 1;
+  position: fixed;
+  width: 100%;
+}
+.navContainer{
+  background-color: #ffffff;
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  padding: 16px;
+  /* z-index: 1;
+  position: fixed;
+  width: 100%; */
+}
+
+.navList{
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+ 
+}
+.navList li{
+  padding: 16px 24px;
+}
+a{
+  text-decoration: none;
+  font-size: .8em;
+  color: #000;
+}
+
+.navList a{
+  text-transform: uppercase;
+  border-radius: 12px;
+  padding: 8px;
+}
+.btnStart{
+  border: 2px solid rgb(70, 187, 70);
+  color: rgb(70, 187, 70);
+}
+.btnCreateAcct{
+  border: 2px solid orange;
+  color: orange;
+}
+.btnLogin{
+  border: 2px solid #000;
+  color: black;
+}
+
+/* lower Nav */
+.lowerNav{
+  background-color: lightgrey;
+  display: flex;
+  justify-content: right;
+  padding-right: 30px;
+}
+.lowerNav li{
+  padding: 12px 16px;
+}
+.lowerNav li a{
+  font-size: 18px;
+}
+
+/* main body */
+.overlay-background{
+  background:  rgba(0,0,0,0.5);
+  height: 100vh;
+}
+.overlay{
+  background:url("./images/background_img.jpg");
+  background-size: cover;
+  background-position: fixed;
+  height: 100vh;
+  position: relative;
+}
+
+.body-content{
+  position: absolute;
+  background: rgba(240, 159, 10, 0.7);
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 80%;
+  padding: 150px 150px;
+  text-align: center;
+  border-radius: 12px;
+  margin-top: 50px;
+}
+.body-content .indented{
+  text-indent: 100;
+}
+
+#section1{
+  height: 100vh;
+  max-width: 100%;
+}
+.imgs{
+  margin: auto;
+  text-align: center;
+}
+.imgs img{
+  width: 300px;
+  height: 300px;
+  border-radius: 50%;
+  padding: 12px;
+}
+
+.para h1{
+  color: orange;
+  font-size: 4em;
+  text-indent: 30px;
+}
+.para p{
+  text-align: center;
+  margin: auto;
+  font-size: 2em;
+  width: 80%;
 }
