--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,9 @@
   padding: 0;
   box-sizing: border-box;
 }
+button{
+  background-color: #fff;
+}
 
 ul{
   margin: 0;
@@ -63,7 +66,7 @@ a{
 
 /* lower Nav */
 .lowerNav{
-  background-color: lightgrey;
+  background-color: orange;
   display: flex;
   justify-content: right;
   padding-right: 30px;
@@ -113,20 +116,143 @@ a{
   text-align: center;
 }
 .imgs img{
-  width: 300px;
-  height: 300px;
+  width: 250px;
+  height: 250px;
   border-radius: 50%;
   padding: 12px;
 }
+.imgs{
+  display: flex;
+  /* flex-wrap: no-wrap; */
+  padding: 5px;
+  justify-content: center;
+  width: 100%;
+}
+.imgs .box{
+  margin: 5px;
+}
+.imgs span{
+  width: 30.3%;
+}
 
+
+.para{
+  text-align: center;
+}
 .para h1{
   color: orange;
   font-size: 4em;
   text-indent: 30px;
 }
-.para p{
+.para p, .btnCreate{
   text-align: center;
   margin: auto;
-  font-size: 2em;
+  font-size: 1.4em;
   width: 80%;
+  padding: 12px;
 }
+
+
+/* S-TAP */
+section .stap{
+  background-color: green;
+  padding: 2rem 5%;
+  color: #fff;
+  width: 100vw;
+  height: 100vh;
+  position: relative;
+  
+}
+.stap .center-stap{
+  top:50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  position: absolute;
+  text-align: center;
+
+}
+.stap .center-stap h1{
+  font-size: 4em;
+  margin-bottom: 12px;
+}
+.stap .center-stap p{
+  font-size: 1.4em;
+  margin: 20px 0 40px 0;
+}
+.stap .center-stap a{
+  border: 1px solid orange;
+  padding: 16px 24px;
+  color: #fff;
+  font-weight: bold;
+  border-radius: 5px;
+}
+.stap .center-stap a:hover, .btnCreate{
+  background-color: orange;
+  transition: .5s ease-in-out;
+  color: #fff;
+}
+/* Footer */
+.footer{
+  background-color: #000000;
+  padding: 2rem 5%;
+  color: #fff;
+}
+.footer .box-container{
+  display: flex;
+  flex-wrap: wrap;
+  gap:1.5rem;
+}
+
+.footer .box-container .box{
+  flex:1 1 25rem;
+}
+
+.footer .box-container .box h3{
+  font-size: 2.5rem;
+  padding:1rem 0;
+}
+
+.footer .box-container .box a{
+  display: block;
+  color:#fff;
+  font-size: 1.5rem;
+  padding:1rem 0;
+}
+
+.footer .box-container .box a:hover{
+  color:orange;
+  text-decoration: underline;
+}
+
+.footer .box-container .box  img{
+  margin-top: 1rem;
+}
+
+.credit input[type="text"]{
+  padding: 16px 24px;
+  border-radius: 12px;
+  outline: none;
+  border: none;
+  margin: 0 12px 0 12px;
+}
+.donate{
+  margin-left: -100px;
+}
+.credit button{
+  padding: 16px 24px;
+  background-color: green;
+  color: white;
+  font-size: .5em;
+  font-weight: bold;
+  cursor: pointer;
+  border-radius: 12px;
+}
+
+.footer .credit{
+  padding:1.5rem;
+  margin-top: 1.5rem;
+  padding-top: 2.5rem;
+  font-size: 2rem;
+  color: #fff;
+}
+
